<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login.LoginActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/lbl_masuk_akun_karirpad"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/lbl_email"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeErrorColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilPassword"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="rahmad@gmail.com"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:lines="1"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/lbl_password"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeErrorColor="@color/Red"
        app:layout_constraintEnd_toEndOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintBottom_toTopOf="@id/cbRememberMe"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="123456"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:lines="1"
            android:inputType="textPassword"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_ingat_saya"
        app:layout_constraintEnd_toStartOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="@id/tilPassword"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingEnd="6dp"
        android:text="@string/lbl_lupa_kata_sandi"
        android:textColor="@color/DodgerBlue"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintStart_toEndOf="@id/cbRememberMe"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/cbRememberMe"
        app:layout_constraintBottom_toBottomOf="@id/cbRememberMe"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Blue"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:text="Login"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="@id/cbRememberMe"
        app:layout_constraintTop_toBottomOf="@id/cbRememberMe"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tvRegister"
        tools:ignore="HardcodedText,UnusedAttribute" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingEnd="6dp"
        android:text="Belum Punya Akun? Daftar disini"
        android:textColor="@color/DodgerBlue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tvInstantLogin"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <TextView
        android:id="@+id/tvInstantLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:paddingEnd="6dp"
        android:text="--------------------  Instant Login  --------------------"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/tvRegister"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btnGoogle"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/IndianRed"
        android:drawableLeft="@drawable/ic_google_polos"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Continue with Google"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/tvInstantLogin"
        app:layout_constraintStart_toStartOf="@id/tvInstantLogin"
        app:layout_constraintTop_toBottomOf="@id/tvInstantLogin"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/btnFacebook"
        tools:ignore="HardcodedText,MissingPrefix,RtlHardcoded,UnusedAttribute" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/Blue"
        android:drawableLeft="@drawable/ic_facebook"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="80dp"
        android:text="Continue with Facebook"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="@id/btnGoogle"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText,MissingPrefix,RtlHardcoded,UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>